crates/moverox-traits-derive/tests/sources/empty_enum.rs
use moverox_traits::MoveDatatype;

#[derive(MoveDatatype)]
pub enum Empty {}

fn main() {}
